# devflakes

./: README.md  flake.nix
haskell/: flake.nix  template.cabal
haskell/app/: Main.hs
haskell/src/: Template.hs
haskell/test/: Spec.hs
scala/: flake.nix
