cabal-version: 3.0
name: template
version: 0.1.0.0
license: BSD-3-Clause
build-type: Simple

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

library
  import: warnings
  exposed-modules:
    Template
  hs-source-dirs: src
  build-depends:
    base >=4.14 && <5
  default-language: Haskell2010

executable template
  import: warnings
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base,
    template
  default-language: Haskell2010

test-suite template-test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
    base,
    hspec,
    template
  default-language: Haskell2010
